--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -295,4 +295,244 @@
  </div>
 <% } %> 
 
+<% if (user.role=='admin') { %> 
+  <div class="back_re">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="title">
+            <h2><%= user.name %></h2>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="services">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="titlepage">
+            <!-- Button trigger modal -->
+            <button
+              type="button"
+              class="btn btn-success mb-3"
+              data-toggle="modal"
+              data-target="#addWorkout"
+            >
+              Create New Workout
+            </button>
+            <button
+              type="button"
+              class="btn btn-primary mb-3"
+              data-toggle="modal"
+              data-target="#addImage"
+            >
+              Upload Image
+            </button>
+            <div class="row">
+              <% for (let i = 0; i<workouts.length;i++) { %> 
+                <div class="col-md-4">
+                <a href="/workout/<%= workouts[i].slug %>">   
+                   <div class="se_img">
+                      <figure><img src="/<%= workouts[i].image  %>" alt="#"/></figure>
+                   </div>
+                   <div class="text-center">
+                     <h3 class="text-white"><%= workouts[i].name.substring(0,30)+ "..." %></h3>
+                   </div>
+                </a>
+                <div class="clearfix">
+                  <ul style="list-style-type: none;">
+                    <li style="float: left;"><button class="btn btn-warning rounded-10 text-white"
+                      data-toggle="modal" data-target="#updateWorkout<%= workouts[i]._id  %>"
+                      >
+                      <span>UPDATE</span>
+                    </button>
+                  </li>
+                    <li style="float: right;"><a href="/workout/<%= workouts[i].slug %>?_method=DELETE" 
+                      onclick="return confirm('Are you sure?')"
+                      class="btn btn-danger rounded-10 text-white">
+                      DELETE
+                    </a></li>
+                  </ul>
+                </div>
+                </div>
+                 <!-- Update Modal-->
+                <div class="modal fade" id="updateWorkout<%= workouts[i]._id  %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body customer-box">
+                          <!-- Tab Panes -->
+                          <div class="tab-content">
+                            <div class="tab-pane active" id="Login">
+                              <form method="post" action="/workout/<%= workouts[i].slug  %>?_method=PUT" class="form-horizontal">
+                                  <div class="form-group">
+                                    <div class="col-sm-12">
+                                      <input type="text" name="name" class="form-control" value="<%= workouts[i].name  %>">
+                                      </div>
+                                    </div>
+                                    <div class="col-sm-12">
+                                      <input type="hidden" name="role" class="form-control"  value="<%= user.role%>" >
+                                      </div>
+                                    </div>
+                                    <div class="form-group">
+                                      <div class="col-sm-12">
+                                        <textarea name="description" class="form-control" cols="30" rows="8"
+                                        required
+                                        ><%= workouts[i].description  %></textarea>
+                                      </div>
+                                    </div>
+                                    <div class="form-group">
+                                      <div class="col-sm-12">
+                                        <select name="category" class="form-control">  
+                                          <% for(let i = 0; i<categories.length; i++) { %> 
+                                          <option value="<%= categories[i]._id %>"><%= categories[i].name %> </option>
+                                          <% } %> 
+                                          </select>
+                                        </div>
+                                      </div>
+                                    <div class="row">
+                                      <div class="col-sm-10">
+                                        <button type="submit" class="btn btn-success btn-radius btn-brd grd1">
+                                          UPDATE
+                                        </button>	
+                                        <button type="submit" class="btn btn-light btn-radius btn-brd grd1"
+                                          data-dismiss="modal" aria-hidden="true"
+                                        >
+                                          Cancel	
+                                        </button>
+                                      </div>	
+                                    </div>
+                                </form>
+                              </div>
+                            </div>
+                          </div>
+                      </div>
+                  </div>
+              <% } %> 
+            </div>
+            <!-- Add Workout Modal -->
+            <div
+              class="modal fade"
+              id="addWorkout"
+              tabindex="-1"
+              role="dialog"
+              aria-labelledby="myModalLabel"
+            >
+              <div
+                class="modal-dialog modal-dialog-centered modal-lg"
+                role="document"
+              >
+                <div class="modal-content">
+                  <div class="modal-body customer-box">
+                    <!-- Tab Panes -->
+                    <div class="tab-content">
+                      <div class="tab-pane active" id="Login">
+                        <form
+                          method="post"
+                          action="/workout"
+                          class="tm-contact-form"
+                          enctype="multipart/form-data"
+                        >
+                          <div class="form-group mb-3">
+                            <input
+                              type="text"
+                              name="name"
+                              class="form-control rounded-0"
+                              placeholder="Workout Name"
+                              required
+                            />
+                          </div>
+                          <div class="form-group">
+                            <input type="hidden" name="role" class="form-control"  value="<%= user.role %>">
+                          </div>
+                            <div class="form-group mb-3">
+                              <select name="category" class="form-control">
+                                <option value="" disabled selected>Select category</option>    
+                                <% for(let i = 0; i<categories.length; i++) { %> 
+                                <option value="<%= categories[i]._id %>"><%= categories[i].name %> </option>
+                                <% } %> 
+                                </select>
+                            </div>
+                          <div class="form-group mb-3">
+                            <textarea
+                              rows="8"
+                              name="description"
+                              class="form-control rounded-0"
+                              placeholder="Workout Description"
+                              required
+                            ></textarea>
+                          </div>
+                          <div class="form-group mb-3">
+                            <input
+                              type="file"
+                              name="image"
+                              class="form-control-file rounded-0"
+                            />
+                          </div>
+                          <div class="form-group mb-0">
+                            <button
+                              type="submit"
+                              class="btn btn-primary rounded-0 d-block ml-auto mr-0 tm-btn-animate tm-btn-submit tm-icon-submit"
+                            >
+                              <span>Add</span>
+                            </button>
+                          </div>
+                        </form>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Upload New Image -->
+            <div
+              class="modal fade"
+              id="addImage"
+              tabindex="-1"
+              role="dialog"
+              aria-labelledby="myModalLabel"
+            >
+              <div
+                class="modal-dialog modal-dialog-centered modal-lg"
+                role="document"
+              >
+                <div class="modal-content">
+                  <div class="modal-body customer-box">
+                    <!-- Tab Panes -->
+                    <div class="tab-content">
+                      <div class="tab-pane active" id="Login">
+                        <form
+                          method="post"
+                          action="/images"
+                          class="tm-contact-form"
+                          enctype="multipart/form-data"
+                        >
+                          <div class="form-group mb-3">
+                            <input
+                              type="file"
+                              name="image"
+                              class="form-control-file rounded-0"
+                            />
+                          </div>
+                          <div class="form-group mb-0">
+                            <button
+                              type="submit"
+                              class="btn btn-primary rounded-0 d-block ml-auto mr-0 tm-btn-animate tm-btn-submit tm-icon-submit"
+                            >
+                              <span>Add</span>
+                            </button>
+                          </div>
+                        </form>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+<% } %> 
 <%- include('partials/_footer') %>
