--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -24,36 +24,13 @@
       <div class="tz-gallery">
         <div class="col-sm-12">
           <div class="row">
+            <% for (let i=0; i<images.length; i++) { %>  
             <div class="col-sm-6 col-md-4">
-              <a class="gallery_img" href="images/gallery1.jpg">
-                <img src="images/gallery1.jpg" alt="Bridge" />
+              <a class="gallery_img" href="/gallery/<%= images[i].image %>">
+                <img src="/gallery/<%= images[i].image %>" alt="Bridge" />
               </a>
             </div>
-            <div class="col-sm-6 col-md-4">
-              <a class="gallery_img" href="images/gallery2.jpg">
-                <img src="images/gallery2.jpg" alt="Bridge" />
-              </a>
-            </div>
-            <div class="col-sm-6 col-md-4">
-              <a class="gallery_img" href="images/gallery3.jpg">
-                <img src="images/gallery3.jpg" alt="Bridge" />
-              </a>
-            </div>
-            <div class="col-sm-6 col-md-4">
-              <a class="gallery_img" href="images/gallery4.jpg">
-                <img src="images/gallery4.jpg" alt="Bridge" />
-              </a>
-            </div>
-            <div class="col-sm-6 col-md-4">
-              <a class="gallery_img" href="images/gallery5.jpg">
-                <img src="images/gallery5.jpg" alt="Bridge" />
-              </a>
-            </div>
-            <div class="col-sm-6 col-md-4">
-              <a class="gallery_img" href="images/gallery6.jpg">
-                <img src="images/gallery6.jpg" alt="Bridge" />
-              </a>
-            </div>
+            <% } %> 
           </div>
         </div>
       </div>
